# tooting

./: .clang-format  .clang-tidy  .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  build.zsh  default.nix  flake.nix
.github/workflows/: main.yml
src/: CMakeLists.txt  Example.cpp  Example.h  GDExtensionTemplate.cpp  GDExtensionTemplate.h  PianoParasite.cpp  PianoParasite.hpp  RegisterExtension.cpp  Toot.cpp  Toot.h
templates/: .#template.debug.gdextension.in  template.debug.gdextension.in  template.release.gdextension.in
testres/: MegadriveOverdrive.fur
